--- a/notes.tex
+++ b/notes.tex
@@ -3,6 +3,7 @@
 \newcommand{\innerprod}[2]{\left<#1,#2\right>}
 \newcommand{\norm}[1]{\left\|#1\right\|}
 \newcommand{\Linf}{L^{\infty}}
+\newcommand{\pdfFrac}[2]{\frac{\partial #1}{\partial #2}}
 \title{A brief note for Evans PDE chapter 5-7}
 
 \author{Shuang Hu}
